--- a/app/src/main/res/layout/activity_my_main.xml
+++ b/app/src/main/res/layout/activity_my_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/common_bg">
+    android:background="@color/primary_white">
 
     <include layout="@layout/layout_toolbar"/>
 
