--- a/app/src/main/res/layout/layout_note_list_item.xml
+++ b/app/src/main/res/layout/layout_note_list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent">
+    android:background="@color/primary_white">
 
 
     <RelativeLayout
@@ -27,7 +27,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/bg_home_note_list2"/>
+                android:background="@drawable/bg_home_note_list"/>
 
         </RelativeLayout>
 
