--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,5 +3,6 @@
 
     <item name="iv_home_add" type="id"/>
     <item name="iv_home_more" type="id"/>
+    <item name="action_right" type="id"/>
 
 </resources>
