--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -52,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_5"
+            android:layout_marginLeft="@dimen/margin_20"
             android:visibility="invisible"
             android:text="@string/sync_upload_need_total_count"
             android:textColor="@color/first_title_color"
