--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -51,7 +51,27 @@
             android:text="@string/tab_item_name_me"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/ll_tab_item_test"
+        style="@style/TabLayout"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center">
 
+        <com.simplenote.widgets.RedPointImageView
+            android:id="@+id/iv_tab_item_test"
+            style="@style/TabImageView"
+            android:paddingTop="@dimen/margin_12"
+            android:paddingBottom="@dimen/margin_12"
+            android:src="@drawable/selector_tab_miao" />
+
+        <TextView
+            android:id="@+id/tv_tab_test"
+            style="@style/TabTextView"
+            android:visibility="gone"
+            android:text="@string/tab_item_name_me"/>
+    </LinearLayout>
     <!--<include-->
     <!--android:layout_weight="1"-->
     <!--android:layout_width="0dp"-->
